--- a/src/pages/categorias/categorias.html
+++ b/src/pages/categorias/categorias.html
@@ -8,5 +8,20 @@
 </ion-header>
 
 <ion-content padding>
-  <p>Pagina de categorias</p>
+
+  <ion-list>
+
+    <button ion-item *ngFor = "let item of items">
+
+      <ion-item>
+      <ion-thumbnail slot="start">
+        <img src="{{bucketUrl}}/cat{{item.id}}.jpg">
+        <h2>{{item.nome}}</h2>
+      </ion-thumbnail>
+      
+      </ion-item>
+    </button>
+  
+  </ion-list>
+
 </ion-content>
